# receipt-processor-challenge

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: main.py
src/receiptprocessor/: app.py  models.py
tests/: conftest.py
tests/api/: test_api.py
tests/unit/: test_calculate_points.py
