[project]
name = "receipt-processor-challenge"
version = "0.1.0"
description = "A simple receipt processor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
